--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "standard"
   ],
   "env": {
+    "jest/globals": true
     // Node.jsの変数や構文を許可
     // "node": true,
     // "browser": true,
@@ -11,6 +12,9 @@
     // ES2015で追加されたグローバル変数等を許可 (ESModules機能には関与しない)
     // "es6": true
   },
+  "plugins": [
+    "jest"
+  ],
   "parserOptions": {
     // ESModules機能を有効
     // "sourceType": "module"
