--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
+    "core-js": "3",
     "eslint": "^6.1.0",
+    "eslint-plugin-jest": "^22.14.1",
+    "jest": "^24.8.0",
     "standard": "^13.1.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
@@ -13,6 +16,8 @@
     "dev": "webpack",
     "watch": "webpack --watch",
     "server": "webpack-dev-server",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "jest": "jest --coverage",
+    "test": "jest --watch"
   }
 }
